Completed the navigation styles

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
       <!-- Basic -->
@@ -27,14 +27,26 @@
 </head>
 <body>
       <div id="page">
-            <header>
-                  <a href="https://codesquad.co/" class="logo"><img src="assets/images/cslogo.png" alt="Site Logo" title="Code Squad"></a>
-                  <div class="hero-section">
+          <div class="header-container">
+                  <header>
+                        <a href="https://codesquad.co/" class="logo"><img src="assets/images/cslogo.png" alt="Site Logo" title="Code Squad"></a>
+                         <nav>
+                              <ul class="left">
+                                    <li><a href="https://codesquad.co/">Home</a></li>
+                                    <li><a href="https://codesquad.co/about">WHO WE ARE</a></li>
+                                    <li><a href="https://codesquad.co/service">What we do</a></li>
+                                    <li><a href="https://codesquad.co/portfolio">our works</a></li>
+                                    <li><a href="https://codesquad.co/contact/">contact us</a></li>
+                                    <li class="sign-up"><a href="https://codesquad.co/project/"><span>start project</span></a></li>
+                              </ul>
+                        </nav>
+                  </header>
+                   <div class="hero-section">
                         <p>We are</p>
                         <h1>CodesquadLLC</h1>
                         <h2>World Class Technology,serving all industries</h2>
                   </div>
-            </header>
+          </div>  
             <section class="main">
                   <div class="main-inner">
                         <div class="left-column">
@@ -69,7 +81,7 @@
                   </aside>
                   <aside>
                         <div class="content">
-                              <i class="fa fa-laptop"></i>
+                              <i class="fa fa-code"></i>
                              <h3>Internship and Training</h3>
                              <p>We train,we drill and inspire. We are producing the next waves of African's most talented developers.You want to get your hands dirty with code, join any of our immersion programs.</p>
                         </div>
@@ -77,18 +89,7 @@
                   </aside>
             </section>
             <section class="featured"></section>
-            <nav>
-                  <ul class="left">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">WHO WE ARE</a></li>
-                        <li><a href="#">What we do</a></li>
-                        <li><a href="#">our works</a></li>
-                        <li><a href="#">contact us</a></li>
-                  </ul>
-                  <ul class="right">
-                        <li><a href="#">start project</a></li>
-                  </ul>
-            </nav>
+           
             <footer></footer>
       </div>
    
