Completed the Footer Section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                               <h2>Provides Solutions for website</h2>
                               <h4>We automate business process with our services.</h4>
                               <p>Codesquad is an innovative web design and development company based in ilorin,Nigeria. We are a software company with a focus on disruptive innovations for businesses and consumers, in areas as Fintech, Edutech, and HealthTech and so on</p>
-                              <a href="#" class="more-about-us">More About Us</a>
+                              <a href="https://codesquad.co/about" class="more-about-us">More About Us</a>
                         </div>
                         <div class="right-column">
                               <img src="assets/images/desktop-mask.png" alt="desktop-mask">
@@ -85,9 +85,19 @@
                 </section>      
             
             </section>
-            <section class="featured"></section>
-           
-            <footer></footer>
+            <footer>
+                  <div class="icons">
+                        <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
+                  </div>
+                  <div class="links">
+                        <div>Copyrights &copy; 2018 All Rights Reserved</div>
+                        <a href="https://codesquad.co/"><img src="assets/images/code.png" alt="Site Logo"></a>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Use</a>
+                  </div>
+            </footer>
       </div>
    
 </body>
