Completed the Client Section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                 </section>      
             
             </section>
+            <div class="clients">
+                  <div class="clients-inner">
+                        <h2>Our Clients</h2>
+                        <p>We love what we do, we serve all industries</p>
+                  </div>
+            </div>
             <footer>
                   <div class="icons">
                         <a href="https://facebook.com/"><i class="fa fa-facebook"></i></a>
