Completed Type Writer Featured

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <div class="main-inner">
                         <div class="left-column">
                               <span class="blue">CODESQUADLLC</span>
-                              <h2>Provides Solutions for website</h2>
+                              <h2>Provides Solutions for <span class="txt-type" data-wait="3000" data-words='["Websites","Mobile Apps","Companies"]'></span></h2>
                               <h4>We automate business process with our services.</h4>
                               <p>Codesquad is an innovative web design and development company based in ilorin,Nigeria. We are a software company with a focus on disruptive innovations for businesses and consumers, in areas as Fintech, Edutech, and HealthTech and so on</p>
                               <a href="https://codesquad.co/about" class="more-about-us">More About Us</a>
@@ -105,6 +105,6 @@
                   </div>
             </footer>
       </div>
-   
+   <script src="assets/js/typer.js"></script>
 </body>
 </html>
