Completed amazing featured

--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@
                 </section>      
             
             </section>
+            <section class="amaze-featured">
+                  <div class="amaze-featured-inner">
+                        <div class="amaze-header-wrapper">
+                              <img src="assets/images/favicon1.png" alt="Site Icon" width="60px" height="50px">
+                              <h2>Amazing Features</h2>
+                              <p>We love what we do, we serve all industries</p>
+                        </div>
+                        <div class="amaze-inner-footer">
+                              <div class="amaze-content">
+                                     <h3> <i class="fa fa-level-up-alt"></i> START UPS</h3>
+                                     <p>Your startup idea don't have to wait, get started with our Software Engineers.</p>
+                              </div>
+                               <div class="amaze-content">
+                                     <h3><i class="fa fa-chart-pie" aria-hidden="true"></i> E-COMMERCE</h3>
+                                     <p>Transaction of buying or selling online dont have to wait we handle that.</p>
+                               </div>
+                               <div class="amaze-content">
+                                     <h3> <i class="fa fa-mobile"></i> TELECOMS</h3>
+                                     <p>We make it our business to know yours,we make your dreams come true.</p>           
+                               </div>
+                        </div>
+                  </div>
+            </section>
             <div class="clients">
                   <div class="clients-inner">
                         <h2>Our Clients</h2>
