Completed the Amazing Featured

--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
                         </div>
                         <div class="amaze-inner-footer">
                               <div class="amaze-content">
-                                     <h3> <i class="fa fa-level-up-alt"></i> START UPS</h3>
+                                     <h3> <i class="fa fa-level-up"></i> START UPS</h3>
                                      <p>Your startup idea don't have to wait, get started with our Software Engineers.</p>
                               </div>
+                              <div class="amaze-content">
+                                    <h3><i class="fa fa-graduation-cap" aria-hidden="true"></i> EDUCATION</h3>
+                                    <p>You dont have to worry with your school portal Codesquad makes it easier .</p>
+                               </div>
                                <div class="amaze-content">
                                      <h3><i class="fa fa-chart-pie" aria-hidden="true"></i> E-COMMERCE</h3>
                                      <p>Transaction of buying or selling online dont have to wait we handle that.</p>
@@ -104,6 +108,10 @@
                                <div class="amaze-content">
                                      <h3> <i class="fa fa-mobile"></i> TELECOMS</h3>
                                      <p>We make it our business to know yours,we make your dreams come true.</p>           
+                               </div>
+                               <div class="amaze-content">
+                                    <h3><i class="fa fa-briefcase" aria-hidden="true"></i> AUTO MOTIVE</h3>
+                                    <p>Let's automate your business process with our services.</p>
                                </div>
                         </div>
                   </div>
