Added addition icons

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                                      <p>We make it our business to know yours,we make your dreams come true.</p>           
                                </div>
                                <div class="amaze-content">
+                                    <h3><i class="fa fa-thermometer-quarter" aria-hidden="true"></i> TECHNOLOGY SERVICES</h3>
+                                    <p>IT Services and Solutions to leading private and public sector,The best is here.</p>
+                               </div>
+                               <div class="amaze-content">
                                     <h3><i class="fa fa-briefcase" aria-hidden="true"></i> AUTO MOTIVE</h3>
                                     <p>Let's automate your business process with our services.</p>
                                </div>
